--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
+    "classnames": "^2.2.6",
     "react": "^16.5.2",
     "react-dom": "^16.4.0",
-    "axios": "^0.17.1",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^4.0.8"
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "react-scripts": "2.0.5"
+    "node-sass": "^4.10.0",
+    "react-scripts": "2.0.5",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
