--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rail-safety-react",
+  "name": "publicfunction-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
