SCSS compilation working and updated the footer option styles
Signed-off-by: Chris Moss <chris@publicfunction.co.uk>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.10.0",
-    "react-scripts": "2.0.5",
+    "react-scripts": "^2.1.1",
     "sass-loader": "^7.1.0"
   },
   "scripts": {
