--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-REACT_APP_API_BASE_URL=http://app.roadmap.local/api/
+REACT_APP_API_BASE_URL=http://app.my.tld/api/
 REACT_APP_API_VERSION=v1
+REACT_APP_TWITTER_API=https://api.twitter.com/whateverthisis
+REACT_APP_TWITTER_API_KEY=
+REACT_APP_TWITTER_API_SECRET=
+REACT_APP_TWITTER_API_USER=
