Working with the Twitch API

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
-REACT_APP_API_BASE_URL=http://app.my.tld/api/
+REACT_APP_API_BASE_URL=http://publicfunction.co.uk/
 REACT_APP_API_VERSION=v1
-REACT_APP_TWITTER_API=https://api.twitter.com/whateverthisis
-REACT_APP_TWITTER_API_KEY=
-REACT_APP_TWITTER_API_SECRET=
+
+REACT_APP_TWITTER_API=https://api.twitter.com/1.1/
+REACT_APP_TWITTER_CONSUMER_API_KEY=
+REACT_APP_TWITTER_CONSUMER_API_SECRET=
+REACT_APP_TWITTER_API_TOKEN=
+REACT_APP_TWITTER_API_TOKEN_SECRET=
 REACT_APP_TWITTER_API_USER=
+REACT_APP_TWITTER_CALLBACK=
+
+REACT_APP_TWITCH_API=https://api.twitch.tv/helix
+REACT_APP_TWITCH_USER_ID=
+REACT_APP_TWITCH_CLIENT_ID=
+REACT_APP_TWITCH_CLIENT_SECRET=
