--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-twitter-widgets": "^1.7.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "twitter-node-client": "0.0.6"
   },
   "devDependencies": {
     "node-sass": "^4.10.0",
